--- a/frontend/src/components/booking/userBookings/myBiddings.html
+++ b/frontend/src/components/booking/userBookings/myBiddings.html
@@ -1,5 +1,6 @@
-<div class="container-fluid">
-    <back-button></back-button>
+<back-button></back-button>
+<div class="container-fluid" ng-init="init()" >
+
     <!-- Header Section -->
     <div class="row margin-top-15">
         <div class="col-xs-12">
