--- a/frontend/src/components/auth/signup.html
+++ b/frontend/src/components/auth/signup.html
@@ -1,4 +1,4 @@
-<div class="container" ng-controller="signupCtrl">
+<div class="container" ng-controller="signupCtrl" ng-init="init()">
   <div class="row" style="min-height: 100vh; display: flex; justify-content: center; align-items: center;">
       <div class="col-lg-4 col-md-6 col-sm-8 col-xs-10">
           <form id="userForm" name="userForm" ng-submit="signup()" novalidate class="panel panel-default">
