--- a/frontend/src/components/home/home.html
+++ b/frontend/src/components/home/home.html
@@ -10,80 +10,53 @@
                 <label>Search:</label>
                 <input type="text" ng-model="search" placeholder="Search for cars" 
                     class="form-control mb-2" 
-                   
-                    ng-change="filterCarsWithDelay()"
-                    >
+                    ng-change="filterCarsWithDelay()">
             </div>
 
             <div class="col-md-4">
                 <label>Price Range:</label>
-                <uib-dropdown class="mb-2" on-toggle="filterCars()">
-                    <button class="btn btn-default dropdown-toggle form-control" uib-dropdown-toggle>
-                        {{ priceFilter || 'All' }} <span class="caret"></span>
-                    </button>
-                    <ul class="dropdown-menu" uib-dropdown-menu>
-                        <li ng-click="priceFilter=''"><a href="#">All</a></li>
-                        <li ng-click="priceFilter='500-1000'"><a href="#">$500 - $1000</a></li>
-                        <li ng-click="priceFilter='1000-1500'"><a href="#">$1000 - $1500</a></li>
-                        <li ng-click="priceFilter='1500-2000'"><a href="#">$1500 - $2000</a></li>
-                        <li ng-click="priceFilter='2000-2500'"><a href="#">$2000 - $2500</a></li>
-                        <li ng-click="priceFilter='2500-3000'"><a href="#">$2500 - $3000</a></li>
-                        <li ng-click="priceFilter='3000-3500'"><a href="#">$3000 - $3500</a></li>
-                        <li ng-click="priceFilter='3500-4000'"><a href="#">$3500 - $4000</a></li>
-                        <li ng-click="priceFilter='4000-4500'"><a href="#">$4000 - $4500</a></li>
-                        <li ng-click="priceFilter='4500-5000'"><a href="#">$4500 - $5000</a></li>
-                        <li ng-click="priceFilter='5000-5500'"><a href="#">$5000 - $5500</a></li>
-                        <li ng-click="priceFilter='5500-6000'"><a href="#">$5500 - $6000</a></li>
-                        <li ng-click="priceFilter='6000-6500'"><a href="#">$6000 - $6500</a></li>
-                        <li ng-click="priceFilter='6500-7000'"><a href="#">$6500 - $7000</a></li>
-                        <li ng-click="priceFilter='7000-7500'"><a href="#">$7000 - $7500</a></li>
-                        <li ng-click="priceFilter='7500-8000'"><a href="#">$7500 - $8000</a></li>
-                        <li ng-click="priceFilter='8000-8500'"><a href="#">$8000 - $8500</a></li>
-                        <li ng-click="priceFilter='8500-9000'"><a href="#">$8500 - $9000</a></li>
-                        <li ng-click="priceFilter='9000-9500'"><a href="#">$9000 - $9500</a></li>
-                        <li ng-click="priceFilter='9500-10000'"><a href="#">$9500 - $10000</a></li>
-                        <li ng-click="priceFilter='10000'"><a href="#">Above $10000</a></li>
-                    </ul>
-                </uib-dropdown>
+                <select class="form-control" ng-model="priceFilter" ng-change="filterCars()">
+                    <option value="">All</option>
+                    <option value="500-1000">$500 - $1000</option>
+                    <option value="1000-1500">$1000 - $1500</option>
+                    <option value="1500-2000">$1500 - $2000</option>
+                    <option value="2000-2500">$2000 - $2500</option>
+                    <option value="2500-3000">$2500 - $3000</option>
+                    <option value="3000-3500">$3000 - $3500</option>
+                    <option value="3500-4000">$3500 - $4000</option>
+                    <option value="4000-4500">$4000 - $4500</option>
+                    <option value="4500-5000">$4500 - $5000</option>
+                    <option value="5000-5500">$5000 - $5500</option>
+                    <option value="5500-6000">$5500 - $6000</option>
+                    <option value="6000-6500">$6000 - $6500</option>
+                    <option value="6500-7000">$6500 - $7000</option>
+                    <option value="7000-7500">$7000 - $7500</option>
+                    <option value="7500-8000">$7500 - $8000</option>
+                    <option value="8000-8500">$8000 - $8500</option>
+                    <option value="8500-9000">$8500 - $9000</option>
+                    <option value="9000-9500">$9000 - $9500</option>
+                    <option value="9500-10000">$9500 - $10000</option>
+                    <option value="10000">Above $10000</option>
+                </select>
             </div>
-
 
             <div class="col-md-4">
                 <label>City:</label>
-                <uib-dropdown on-toggle="filterCars()">
-                    <button class="btn btn-default dropdown-toggle form-control" uib-dropdown-toggle >
-                        {{ city || 'Select City' }} <span class="caret"></span>
-                    </button>
-                    <ul class="dropdown-menu" uib-dropdown-menu>
-                        <li ng-click="city = 'Delhi'"><a href="#">Delhi</a></li>
-                        <li ng-click="city = 'Mumbai'"><a href="#">Mumbai</a></li>
-                        <li ng-click="city = 'Gwalior'"><a href="#">Gwalior</a></li>
-                        <li ng-click="city = 'Bhind'"><a href="#">Bhind</a></li>
-                        <li ng-click="city = 'Gurugram'"><a href="#">Gurugram</a></li>
-                        <li ng-click="city = 'Agra'"><a href="#">Agra</a></li>
-                        <li ng-click="city = 'Shiv puri'"><a href="#">Shiv Puri</a></li>
-                    </ul>
-                </uib-dropdown>
+                <select class="form-control" ng-model="city" ng-change="filterCars()">
+                    <option value="">Select City</option>
+                    <option ng-repeat="cityOption in cities" value="{{cityOption}}">{{cityOption}}</option>
+                </select>
             </div>
         </div>
 
         <div class="row mt-3">
-
             <div class="col-md-4">
                 <label>Category:</label>
-                <uib-dropdown class="mb-2" on-toggle="filterCars()" >
-                    <button class="btn btn-default dropdown-toggle form-control" uib-dropdown-toggle >
-                        {{ category || 'Select Category' }} <span class="caret"></span>
-                    </button>
-                    <ul class="dropdown-menu" uib-dropdown-menu>
-                        <li ng-repeat="cat in carCategories" ng-click="setCategory(cat.name)">
-                            <a href="#">{{cat.name}}</a>
-                        </li>
-                    </ul>
-                  
-                </uib-dropdown>
+                <select class="form-control" ng-model="category" ng-change="filterCars()">
+                    <option value="">Select Category</option>
+                    <option ng-repeat="cat in carCategories" value="{{cat.name}}">{{cat.name}}</option>
+                </select>
             </div>
-
 
             <div class="col-md-4 text-center" style="margin-top: 25px;"> 
                 <button class="btn btn-warning" ng-click="resetFilters()">
@@ -94,7 +67,7 @@
     </div>
 </div>
 <!-- Recommended Cars Carousel - Only visible to buyers -->
-<div class="panel panel-default"  ng-if=" user && !user.isSeller">
+<div class="panel panel-default"  ng-if=" user && !user.isSeller && !filteringStarted"  >
 >
     <div class="panel-heading" ng-if="recommendedCarsGroups.length>0">
       <h3 class="panel-title text-center">
@@ -127,6 +100,7 @@
                     <span class="text-muted"><span class="glyphicon glyphicon-map-marker"></span> {{car.vehicle.city}}</span>
                     <span class="text-muted "><span class="glyphicon glyphicon-tag"></span> {{car.vehicle.category}}</span>
                     <span class="text-muted"><span class="glyphicon glyphicon-dashboard"></span> {{car.vehicle.mileage}} kmpl</span>
+                    
                     <span class="text-muted "><span class="glyphicon glyphicon-tint"></span> {{car.vehicle.fuelType}}</span>
                   </p>
                   <p>
@@ -142,61 +116,165 @@
       </div>
   
 
-      <div class="text-center" ng-if="recommendedCarsGroups.length>0">
-        <div class="btn-group">
-          <button type="button" class="btn btn-default" ng-click="prevSlide()">
-            <span class="glyphicon glyphicon-chevron-left"></span>
-          </button>
-          <button type="button" class="btn btn-default" ng-click="nextSlide()">
-            <span class="glyphicon glyphicon-chevron-right"></span>
-          </button>
-        </div>
-      </div>
+      
     </div>
-  </div>
+</div>
   
 
 <div id="cars-listing" ng-init="init()" class="container mt-4">
     <div class="row">
-        <div class="col-md-6 col-xs-6" style="border-radius: 10px;" ng-repeat="car in allCars ">
-            <div class="panel panel-default car-panel" ng-click="redirectCarPage(car._id)">
-                <div class="panel-body"> 
-                    <img class="img-responsive center-block car-image" style="width: 300px; height: 200px;"  ng-src="{{ car.vehicleImages[0].url || 'default-car.jpg' }}" alt="{{ car.carName }}">
-                    <div class="car-details text-center">
-                        <h4 class="text-primary">{{car.company}} {{ car.name }} ({{ car.modelYear }})</h4>
-                        <p class="price-tag"><strong>$ {{ car.price }}</strong> per day</p>
-                        <p>
-                          <strong>Color:</strong> 
-                          <span ng-attr-style="display: inline-block; width: 20px; height: 20px; border-radius: 50%; border: 1px solid #ccc; vertical-align: middle; margin-left: 5px; background-color: {{car.color}}" title="{{car.color}}"></span>
-                      </p>
-                        <p><i class="fa fa-tachometer"></i> <strong>Mileage:</strong> {{ car.mileage }} kmpl</p>
+        <div class="col-md-6 col-sm-6" ng-repeat="car in allCars">
+            <div class="panel panel-default car-panel" ng-click="redirectCarPage(car._id)" style="margin-bottom: 20px; cursor: pointer;">
+                <div class="panel-body" style="padding: 0;">
+                    <!-- Image container with fixed dimensions -->
+                    <div class="car-image-container" style="height: 200px; overflow: hidden; position: relative; background-color: #f5f5f5;">
+                        <img ng-src="{{ car.vehicleImages[0].url || 'default-car.jpg' }}" 
+                             alt="{{ car.carName }}"
+                             style="width: 100%; height: 100%; object-fit: cover; object-position: center;">
+                    </div>
+                    
+                    <!-- Car details with consistent padding -->
+                    <div class="car-details" style="padding: 15px;">
+                        <h4 class="text-primary" style="margin-top: 0; margin-bottom: 10px; height: 40px; overflow: hidden;">
+                            {{car.company}} {{ car.name }} ({{ car.modelYear }})
+                        </h4>
+                        
+                        <div class="row">
+                            <div class="col-xs-6">
+                                <p class="price-tag" style="font-size: 18px; margin-bottom: 10px;">
+                                    <strong>$ {{ car.price }}</strong> 
+                                    <small class="text-muted">per day</small>
+                                </p>
+                            </div>
+                            <div class="col-xs-6 text-right">
+                                <span class="label label-primary">{{car.category}}</span>
+                            </div>
+                        </div>
 
-                        <div class="owner well well-sm text-center">
-                            <strong><i class="fa fa-user"></i> Owner:</strong> {{ car.owner.firstName }} {{ car.owner.lastName }} <br>
-                            <strong><i class="fa fa-envelope"></i> Email:</strong> {{ car.owner.email }} <br>
-                            <strong><i class="fa fa-map-marker"></i> Location:</strong> {{ car.owner.city }}<br>
+                        <div class="car-specs" style="margin-bottom: 15px;">
+                            <div class="row">
+                                <div class="col-xs-6">
+                                    <p style="margin-bottom: 5px;">
+                                        <span class="glyphicon glyphicon-map-marker"></span>
+                                        <strong>{{car.city}}</strong>
+                                    </p>
+                                </div>
+                                <div class="col-xs-6">
+                                    <p style="margin-bottom: 5px;">
+                                        <span class="glyphicon glyphicon-dashboard"></span>
+                                        <strong>{{car.mileage}} kmpl</strong>
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-xs-6">
+                                    <p style="margin-bottom: 5px;">
+                                        <span class="glyphicon glyphicon-tint"></span>
+                                        <strong>{{car.fuelType}}</strong>
+                                    </p>
+                                </div>
+                                <div class="col-xs-6">
+                                    <p style="margin-bottom: 5px;">
+                                        <span class="glyphicon glyphicon-record"></span>
+                                        Color: 
+                                        <span ng-attr-style="display: inline-block; width: 15px; height: 15px; border-radius: 50%; border: 1px solid #ccc; vertical-align: middle; margin-left: 5px; background-color: {{car.color}}" 
+                                              title="{{car.color}}">
+                                        </span>
+                                    </p>
+                                </div>
+                            </div>
+                        </div>
+
+                        <!-- Owner details in a well with consistent height -->
+                        <div class="well well-sm" style="margin-bottom: 0; background-color: #f9f9f9;">
+                            <div class="row">
+                                <div class="col-xs-12">
+                                    <p style="margin-bottom: 5px;">
+                                        <span class="glyphicon glyphicon-user"></span>
+                                        <strong>{{car.owner.firstName}} {{car.owner.lastName}}</strong>
+                                    </p>
+                                    <p style="margin-bottom: 5px;">
+                                        <span class="glyphicon glyphicon-envelope"></span>
+                                        {{car.owner.email}}
+                                    </p>
+                                    <p style="margin-bottom: 0;">
+                                        <span class="glyphicon glyphicon-map-marker"></span>
+                                        {{car.owner.city}}
+                                    </p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
        
-
-        <div class="col-12 text-center" ng-if="allCars.length === 0">
-            <div class="alert alert-warning mt-4">
+        <!-- No cars message -->
+        <div class="col-xs-12 text-center" ng-if="allCars.length === 0">
+            <div class="alert alert-warning" style="margin-top: 20px;">
                 <strong>No available cars matching your filters.</strong>
             </div>
         </div>
     </div>
-    <div class="text-center" ng-click="loadMoreCars()" ng-if="hasMoreCars" style="margin-bottom: 20px;">
-        <button id="load-more-btn" class="btn btn-primary mt-3">
-            Load More <span class="glyphicon glyphicon-chevron-down"></span>
+
+    <!-- Load more button -->
+    <div class="text-center" style="margin: 20px 0;" ng-if="hasMoreCars">
+        <button id="load-more-btn" class="btn btn-primary" ng-click="loadMoreCars()">
+            Show More <span class="glyphicon glyphicon-chevron-down"></span>
           </button>
     </div>
 
-<div class="text-center" ng-show="isLoading">
-    <i class="fa fa-spinner fa-spin fa-3x fa-fw"></i>
-    <span>Loading...</span>
+    <!-- Loading spinner -->
+    <div class="text-center" ng-show="isLoading" style="margin: 20px 0;">
+        <span class="glyphicon glyphicon-refresh spin" style="font-size: 24px;"></span>
+        <p>Loading...</p>
+    </div>
 </div>
 
-</div>
+<style>
+    .car-panel {
+        transition: transform 0.2s ease, box-shadow 0.2s ease;
+        border: 1px solid #ddd;
+        margin-bottom: 20px;
+    }
+    
+    .car-panel:hover {
+        transform: translateY(-5px);
+        box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+    }
+
+    .car-details h4 {
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
+    }
+
+    .spin {
+        -webkit-animation: spin 1s infinite linear;
+        animation: spin 1s infinite linear;
+    }
+
+    @-webkit-keyframes spin {
+        0% { -webkit-transform: rotate(0deg); }
+        100% { -webkit-transform: rotate(360deg); }
+    }
+
+    @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+    }
+
+    .well {
+        padding: 10px;
+        margin-bottom: 0;
+    }
+
+    .label {
+        display: inline-block;
+        padding: 5px 10px;
+    }
+
+    .glyphicon {
+        margin-right: 5px;
+    }
+</style>
