--- a/frontend/src/components/profile/myProfile.html
+++ b/frontend/src/components/profile/myProfile.html
@@ -92,31 +92,32 @@
 
 
   <script type="text/ng-template" id="updateUserModal.html">
-    <div class="modal-header" ng-if="isModalOpen">
-      <button type="button" class="close" ng-click="$dismiss()">&times;</button>
+    <div class="modal-header">
+      <button type="button" class="close" ng-click="cancel()">&times;</button>
       <h4 class="modal-title">Update Profile</h4>
     </div>
     <div class="modal-body">
-      <div class="form-group">
-        <label>First Name</label>
-        <input type="text" class="form-control" placeholder="Enter first name" ng-model="updatedUser.firstName">
-      </div>
-      <div class="form-group">
-        <label>Last Name</label>
-        <input type="text" class="form-control" placeholder="Enter last name" ng-model="updatedUser.lastName">
-      </div>
-      <div class="form-group">
-        <label>City</label>
-        <select class="form-control" ng-model="updatedUser.city">
-            <option value="" disabled>Please select your city</option>
-            <option ng-repeat="city in cities" value="{{city}}">{{city}}</option>
-        </select>
+      <form name="updateUserForm" novalidate>
+        <div class="form-group">
+          <label>First Name</label>
+          <input type="text" name="firstName" class="form-control" placeholder="Enter first name" ng-model="updatedUser.firstName" required>
+        </div>
+        <div class="form-group">
+          <label>Last Name</label>
+          <input type="text" name="lastName" class="form-control" placeholder="Enter last name" ng-model="updatedUser.lastName" required>
+        </div>
+        <div class="form-group">
+          <label>City</label>
+          <select class="form-control" name="city" ng-model="updatedUser.city" required>
+              <option value="" disabled>Please select your city</option>
+              <option ng-repeat="city in cities" value="{{city}}">{{city}}</option>
+          </select>
+        </div>
+      </form>
     </div>
-      
-    </div>
-    
     <div class="modal-footer">
-      <button class="btn btn-primary" ng-click="updateUser()">Save</button>
+      <button type="button" class="btn btn-default" ng-click="cancel()">Cancel</button>
+      <button type="submit" class="btn btn-primary" ng-click="saveUser()">Save Changes</button>
     </div>
   </script>
 
