--- a/frontend/src/components/admin/userManagement/userManagement.html
+++ b/frontend/src/components/admin/userManagement/userManagement.html
@@ -61,9 +61,13 @@
         </div>
     </div>
     <!--more button to load more users-->
-    <div class="text-center" ng-click="loadMore()" ng-if="hasMoreUsers" style="margin-bottom: 20px;">
+    <div class="text-center" ng-click="loadMore()" ng-if="hasMoreUsers && !isLoading" style="margin-bottom: 20px;">
         <button id="load-more-btn" class="btn btn-primary mt-3">
             Load More <span class="glyphicon glyphicon-chevron-down"></span>
           </button>
+    </div>
+    <div class="text-center" ng-show="isLoading">
+        <i class="fa fa-spinner fa-spin fa-3x fa-fw text-primary"></i>
+        <span class="text-primary">Loading...</span>
     </div>
 </div>
