--- a/frontend/src/components/booking/userBookings/userBookings.html
+++ b/frontend/src/components/booking/userBookings/userBookings.html
@@ -33,7 +33,6 @@
                 <table class="table table-striped table-bordered table-hover">
                     <thead class="thead-dark">
                         <tr>
-                            <th>S.no</th>
                             <th>Booking ID</th>
                             <th>Total Amount</th>
                             <th>Start Date</th>
@@ -45,7 +44,6 @@
                     </thead>
                     <tbody>
                         <tr ng-repeat="booking in bookings">
-                            <td>{{($index + 1) + (currentPage - 1) * itemsPerPage}}</td>
                             <td><small>{{booking._id}}</small></td>
                             <td><strong class="text-success">${{booking.calculate()}}</strong></td>
                             <td>{{booking.startDate | date: 'MMM dd, yyyy'}}</td>
@@ -62,7 +60,7 @@
                                     <h4>{{booking.vehicle.company}} {{booking.vehicle.name}}</h4>
                                     <p><strong>Model:</strong> {{booking.vehicle.modelYear}}</p>
                                     <p><strong>Category:</strong> {{booking.vehicle.category}}</p>
-                                    <p><strong>Price:</strong> ${{booking.vehicle.carPrice}}/day</p>
+                                    <p><strong>Price:</strong> ${{booking.amount}}/day</p>
                                     <small class="text-muted">
                                         {{booking.vehicle.fuelType}} | {{booking.vehicle.mileage}} kmpl
                                     </small>
@@ -89,6 +87,7 @@
                     <i class="glyphicon glyphicon-refresh"></i> Load More Bookings
                 </button>
             </div>
+            
         </div>
     </div>
 </div>
@@ -118,7 +117,6 @@
               required
             >
               <option value="" disabled selected>Select Rating</option>
-              <option value="1">1 - Poor</option>
               <option value="2">2 - Fair</option>
               <option value="3">3 - Good</option>
               <option value="4">4 - Very Good</option>
