--- a/frontend/src/components/profile/myProfile.html
+++ b/frontend/src/components/profile/myProfile.html
@@ -68,10 +68,15 @@
       </div>
      
     </div>
-    <div class="text-center" ng-click="loadMore()" ng-if="hasMoreCars" style="margin-bottom: 20px;">
+    <div class="text-center" ng-click="loadMore()" ng-if="hasMoreCars && !isLoading" style="margin-bottom: 20px;">
       <button id="load-more-btn" class="btn btn-primary mt-3">
           Load More <span class="glyphicon glyphicon-chevron-down"></span>
         </button>
+  </div>
+    <!-- Loading spinner -->
+    <div class="text-center" ng-show="isLoading" style="margin: 20px 0;">
+      <span class="glyphicon glyphicon-refresh spin" style="font-size: 24px;"></span>
+      <p>Loading...</p>
   </div>
   </div>
 
